Fix broken layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,9 +26,11 @@ body {
   }
 }
 .nav a {
-  @apply h-full flex flex-row items-center p-8;
-  @apply shadow-white hover:shadow-white shadow-[inset_0_-2px_0_0] hover:shadow-[inset_0_-6rem_0_0];
-  @apply hover:text-black transition-all duration-500 ease-in-out;
+  @apply block h-full p-8 text-center content-center;
+  @apply text-white hover:text-black transition-all duration-500 ease-in-out;
+
+  box-shadow: inset 0 -2px white;
+  &:hover { box-shadow: inset 0 calc(-1 * theme(spacing.24)) white; }
 }
 
 .prose {
@@ -38,12 +40,12 @@ body {
   h4 { @apply border-blue-400 border-b-2 pb-1 before:content-["#"] before:me-1 after:content-["//_Level_4"] after:ms-1 after:text-xs; ; }
   h5 { @apply border-blue-400 border-b-2 before:content-["#"] before:me-1 after:content-["//_Level_5"] after:ms-1 after:text-xs; }
   h6 { @apply border-blue-400 border-b-2 before:content-["#"] before:me-1 after:content-["//_Level_6"] after:ms-1 after:text-xs; }
-}
 
-.icon-link {
-  @apply text-sm icon-mdi-light-link-variant mx-0.5 align-middle;
-}
+  .icon-link {
+    @apply text-sm icon-mdi-light-link-variant mx-0.5 align-middle;
+  }
 
-a[href^='http'] {
-  @apply after:icon-material-symbols-light-open-in-new after:mx-0.5 after:align-middle;
+  a[href^='http'] {
+    @apply after:icon-material-symbols-light-open-in-new after:mx-0.5 after:align-middle;
+  }
 }
